# link-shorteners

./: LICENSE  README.md  pyproject.toml
antispam_link_shorteners/: __init__.py  antispam_link_shorteners.py  link_shorteners.py
py-link-shorteners/link_shorteners/: link_shorteners.py
tests/: test_antispam.py
