[project]
name = "antispam-link-shorteners"
version = "0.2.1"
description = "A fast, cached Python library to detect and block spam URL shortener domains."
readme = "README.md"
requires-python = ">=3.9, <=3.14"
license = { text = "MIT" }
authors = [
    { name = "Vladimir Klimenko", email = "v.klimenko.2137@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
"Repository" = "https://github.com/brandonzorn/link-shorteners"
"Bug Tracker" = "https://github.com/brandonzorn/link-shorteners/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "COM",
    "E",
    "EM",
    "ERA",
    "F",
    "FIX",
    "I",
    "ISC",
    "N",
    "PTH",
    "RET",
    "RSE",
    "Q",
    "T20",
    "UP",
    "W",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true
